--- a/project/pocketWorld.html
+++ b/project/pocketWorld.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <section id="pocketWorld" class="project-page navbar-trans">
+    <section id="pocketWorld" class="project-page">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 title-cover">
@@ -379,7 +379,7 @@
             </div>
         </section>
 
-        <section id="learning " class="list-item " style="background-color: rgba(254, 200, 4, 0.1); ">
+        <section id="learning " class="list-item ">
             <div class="container ">
                 <h4 class="heading my-4 project-heading ">學習 Learning</h4>
                 <div class="row justify-content-center ">
