--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
+    <!-- media query preload -->
+    <link rel="preload" href="./img/home_bg.jpg" as="image" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
