--- a/project/moodlight.html
+++ b/project/moodlight.html
@@ -137,8 +137,8 @@
 
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>原型</strong></h3>
-                        <div class="center mx-3">
-                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqCuuHUTKLu5B8fWuqVXkeH%2FMoodlight%3Fpage-id%3D0%253A1%26node-id%3D267-96%26starting-point-node-id%3D267%253A96"
+                        <div class="mx-2 row justify-content-center">
+                            <iframe class="moodlight-iframe " style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqCuuHUTKLu5B8fWuqVXkeH%2FMoodlight%3Fpage-id%3D0%253A1%26node-id%3D267-96%26starting-point-node-id%3D267%253A96"
                                 allowfullscreen></iframe>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
 
                         <!-- 數據來源 -->
                         <div class="row justify-content-center mt-5">
-                            <div class="col-lg-5 col-md-4 my-auto">
+                            <div class="col-lg-5 col-md-12 my-auto">
                                 <p class="pt-4 second-heading"><strong>數據來源一：快樂日記比對
                                 </strong>
                                 </p>
@@ -214,14 +214,14 @@
                                 </div>
                             </div>
                             <!-- <div class="col-lg-1 col-md-1 "></div> -->
-                            <div class="col-lg-7 col-md-8 col-sm-5 mx-auto">
-                                <img class="my-2 mx-3" width="100%" src="../img/feature-project/moodlight/diary-analysis.png" alt="MoodLight 快樂日記比對">
+                            <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
+                                <img class="my-2 img-margin" width="100%" src="../img/feature-project/moodlight/diary-analysis.png" alt="MoodLight 快樂日記比對">
                             </div>
                         </div>
 
                         <div class="row justify-content-center mt-5 project-reverse">
-                            <div class="col-lg-7 col-md-8 col-sm-5 mx-auto">
-                                <img class="my-2" width="100%" src="../img/feature-project/moodlight/clustering.png" alt="MoodLight 分群使用者推薦">
+                            <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
+                                <img class="my-2 img-margin" width="100%" src="../img/feature-project/moodlight/clustering.png" alt="MoodLight 分群使用者推薦">
                             </div>
                             <div class="col-lg-5 col-md-4 my-auto">
                                 <p class="pt-4 second-heading"><strong>數據來源二：分群使用者推薦
@@ -237,12 +237,12 @@
 
                     <div id="uidesign" class="col-lg-8 my-5">
                         <h3 class="page-heading my-3"><strong>04 介面設計</strong></h3>
-                        <div class="mx-3">
-                            <img class="mb-3 mx-3" width="100%" src="../img/feature-project/moodlight/moodlight-mockup-grey.png" alt="MoodLight 分群使用者推薦">
+                        <div class="img-margin">
+                            <img class="mb-3 " width="100%" src="../img/feature-project/moodlight/moodlight-mockup-grey.png" alt="MoodLight 分群使用者推薦">
                         </div>
                         <div class="row justify-content-center my-5">
                             <div class="col-lg-4 col-md-4 col-sm-5 mx-auto">
-                                <img class="mb-3 mx-3" width="100%" src="../img/feature-project/moodlight/m-light.png" alt="MoodLight 姆姆形象">
+                                <img class="mb-3 img-margin" width="100%" src="../img/feature-project/moodlight/m-light.png" alt="MoodLight 姆姆形象">
                             </div>
 
                             <div class="col-lg-8 col-md-6 col-sm- my-auto">
