--- a/project/moodlight.html
+++ b/project/moodlight.html
@@ -192,7 +192,7 @@
                                 <li class="my-2 "><span>快樂清單推薦：</span>心情低落時，透過大數據運算，獲得客製化解決方法</li>
                             </ui>
                         </div>
-                        <img class="my-3 mx-3" width="100%" src="../img/feature-project/moodlight/moodlight-userflow.png" alt="MoodLight 使用者流程圖">
+                        <img class="my-3 img-margin" width="100%" src="../img/feature-project/moodlight/moodlight-userflow.png" alt="MoodLight 使用者流程圖">
                     </div>
 
                     <div id="workflow" class="col-lg-8 my-3 mt-5">
@@ -201,7 +201,7 @@
                             <p>人可以透過自身的行為來獲取快樂因子，因此 MoodLight 希望收集使用者的偏好數據，建立客製化推薦資料庫，並透過集群分析（K-means clustering）的方式，類聚特徵相似的使用者數據，給予最匹配的的快樂清單推薦。
                             </p>
                         </div>
-                        <img class="my-2 mx-3" width="100%" src="../img/feature-project/moodlight/moodlight-flowchart.png" alt="MoodLight 數據蒐集流程圖">
+                        <img class="my-2 img-margin" width="100%" src="../img/feature-project/moodlight/moodlight-flowchart.png" alt="MoodLight 數據蒐集流程圖">
 
                         <!-- 數據來源 -->
                         <div class="row justify-content-center mt-5">
@@ -241,11 +241,11 @@
                             <img class="mb-3 " width="100%" src="../img/feature-project/moodlight/moodlight-mockup-grey.png" alt="MoodLight 分群使用者推薦">
                         </div>
                         <div class="row justify-content-center my-5">
-                            <div class="col-lg-4 col-md-4 col-sm-5 mx-auto">
+                            <div class="col-lg-4 col-md-4 col-sm-4 mx-auto">
                                 <img class="mb-3 img-margin" width="100%" src="../img/feature-project/moodlight/m-light.png" alt="MoodLight 姆姆形象">
                             </div>
 
-                            <div class="col-lg-8 col-md-6 col-sm- my-auto">
+                            <div class="col-lg-8 col-md-8 col-sm-8 my-auto">
                                 <div class="row list-padding">
                                     <ui class="content-black">
                                         <li class="mb-2 "><span>風格：</span>與美術設計合作，設計可愛溫馨的姆姆形象</li>
